--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,11 @@ body {
 .book p {
   margin-top: 0.5rem;
 }
+@media only screen and (max-width: 600px) {
+  .booklist {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .book img {
+    max-block-size: 17rem;
+  }
+}
