--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body {
 
 @media screen and (min-width: 768px) {
   .booklist {
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
@@ -43,4 +43,12 @@ body {
 
 .book p {
   margin-top: 0.5rem;
+}
+@media only screen and (max-width: 600px) {
+  .booklist {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .book img {
+    max-block-size: 17rem;
+  }
 }
